--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,5 +27,5 @@ jobs:
     - name: Install dependencies
       run: npm install
 
-    - name: Run start /src/server.js
+    - name: Run start server.js
       run: npm start
