--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,5 +27,5 @@ jobs:
     - name: Install dependencies
       run: npm install
 
-    - name: Run start server.js
-      npm: run start
+    - name: Run start ../src/server.js
+      run: npm start
