--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,4 +29,4 @@ jobs:
         run: npm install
 
       - name: Run server script
-        run: node src/server.js
+        run: node ../src/server.js
