--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,6 +30,9 @@ jobs:
           rm -rf node_modules package-lock.json
           npm install
 
+      - name: Verify directory structure
+        run: ls -R
+
       - name: Debug Fastify and Node.js
         run: |
           echo "Node.js version:"
@@ -39,4 +42,5 @@ jobs:
           npm list fastify
 
       - name: Run server script
-        run: node ../src/server.js # Ajuste conforme o caminho do arquivo
+        run: node src/server.js
+
